src/objects/GS_Admin_Checklist_Item__mdt.object
<CustomObject>
    <description>NPSP Getting Started Page section items</description>
    <fields>
        <fullName>Description_Label__c</fullName>
        <description>The api name for the Description label of a section item on the Get Started page.</description>
        <inlineHelpText>The api name for the Description label of a section item on the Get Started page.</inlineHelpText>
        <label>Description Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extra_Info_Label__c</fullName>
        <description>Provides extra information about a section item (such as video length, PDF, etc). Shown in the upper right corner.</description>
        <inlineHelpText>Provides extra information about a section item (such as video length, PDF, etc). Shown in the upper right corner.</inlineHelpText>
        <label>Extra Info Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_Admin_Checklist_Section__c</fullName>
        <description>The section on the Get Started page that this item is part of.</description>
        <inlineHelpText>The section on the Get Started page that this item is part of.</inlineHelpText>
        <label>GS Admin Checklist Section</label>
        <referenceTo>GS_Admin_Checklist_Section__mdt</referenceTo>
        <relationshipLabel>GS Admin Checklist Items</relationshipLabel>
        <relationshipName>GS_Admin_Checklist_Items</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Has_Link__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the item has a link to display</description>
        <inlineHelpText>Indicates if the item has a link to display</inlineHelpText>
        <label>Has Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <description>The path and filename of the image in the Static Resource to render</description>
        <inlineHelpText>The path and filename of the image in the Static Resource to render</inlineHelpText>
        <label>Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_Label__c</fullName>
        <description>The custom label api name used in the link on a section item on the Getting Started page</description>
        <inlineHelpText>The custom label api name to use for the link label</inlineHelpText>
        <label>Link Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_URL__c</fullName>
        <description>The target URL for the Link</description>
        <inlineHelpText>The target URL for the Link</inlineHelpText>
        <label>Link URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <description>The position of this section item on the Getting Started page</description>
        <inlineHelpText>The position of this section item in the list of items.</inlineHelpText>
        <label>Position</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Button_Label__c</fullName>
        <description>The custom label api name for the Primary Button in a section item on the Getting Started page.</description>
        <inlineHelpText>The custom label api name for the Primary Button Label</inlineHelpText>
        <label>Primary Button Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Button_Type__c</fullName>
        <description>The type of action related the Primary Button</description>
        <inlineHelpText>The type of action related the Primary Button</inlineHelpText>
        <label>Primary Button Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Disabled</fullName>
                    <default>true</default>
                    <label>Disabled</label>
                </value>
                <value>
                    <fullName>sfdc:new-tab</fullName>
                    <label>SFDC New Tab</label>
                </value>
                <value>
                    <fullName>link</fullName>
                    <label>External Page</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Button_Value__c</fullName>
        <description>The value used for the action of the Primary Button. For an External Page Button, this is the external URL. For an SFDC New Tab button, this is the api name of the tab you want to open. The format should be {type(without started &quot;standard__&quot;)}:{objectApiName}:{actionName}</description>
        <inlineHelpText>The value used for the action of the Primary Button</inlineHelpText>
        <label>Primary Button Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Button_Label__c</fullName>
        <description>The custom label api name for the Secondary Button in a section item on the Getting Started page.</description>
        <inlineHelpText>The custom label api name for the Secondary Button Label</inlineHelpText>
        <label>Secondary Button Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Button_Type__c</fullName>
        <description>The type of action related the Secondary Button</description>
        <inlineHelpText>The type of action related the Secondary Button</inlineHelpText>
        <label>Secondary Button Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Disabled</fullName>
                    <default>true</default>
                    <label>Disabled</label>
                </value>
                <value>
                    <fullName>sfdc:new-tab</fullName>
                    <label>SFDC New Tab</label>
                </value>
                <value>
                    <fullName>link</fullName>
                    <label>External Page</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Button_Value__c</fullName>
        <description>The value used for the action of the Secondary Button. For an External Page Button, this is the external URL. For an SFDC New Tab button, this is the api name of the tab you want to open. The format should be {type(without started &quot;standard__&quot;)}:{objectApiName}:{actionName}</description>
        <inlineHelpText>The value used for the action of the Secondary Button</inlineHelpText>
        <label>Secondary Button Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Label__c</fullName>
        <description>The custom label api name used for a section item label on the Getting Started page.</description>
        <inlineHelpText>The custom label api name for the Title Label</inlineHelpText>
        <label>Title Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>GS Admin Checklist Item</label>
    <pluralLabel>GS Admin Checklist Items</pluralLabel>
</CustomObject>